# kmc_cluster_simulation_rs

./: .gitignore  Cargo.toml  README.md  alpha.json  create_sites.py  requirements.txt  view_snapshots.py
example_data/: 4033A_2lPt.xyz  711_1pt_arround_pd.xyz
python_scripts/: view_snapshots.py
src/: add_atom.rs  add_remove.rs  add_remove_list.rs  alpha_energy.rs  atom_change.rs  buckets.rs  buckets_linear.rs  energy.rs  grid_structure.rs  lib.rs  listdict.rs  main.rs  moves.rs  read_and_write.rs  setup.rs  sim.rs
