[package]
name = "mc"
version = "0.1.0"
edition = "2021"

# [build]
# rustflags = ["-C", "target-feature=+sse3,+avx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.70"
chemfiles = "0.10.3"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.3.0"
fnv = "1.0.7"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
vasp-poscar = "0.3.2"

[profile.profiling]
inherits = "release"
debug = true
